# cleader

./: .gitignore  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  MAINTAINING.md  README.md
.github/workflows/: release.yml
docs/historical/: README.md  early-architecture.md  early-readme.md  early-specs.md
docs/superpowers/plans/: 2026-05-03-cleader-v1.md  2026-05-11-cleader-v0.4.4.md  2026-05-14-cleader-event-loop-polish.md  2026-05-14-cleader-help-overlay.md  2026-05-14-cleader-library-search.md  2026-05-14-cleader-marquee-titles.md
docs/superpowers/specs/: 2026-05-03-cleader-v1-design.md  2026-05-11-cleader-v0.4.4-design.md  2026-05-13-cleader-library-search-design.md
src/: app.rs  ascii_art.rs  cover_cache.rs  epub.rs  error.rs  help.rs  input.rs  lib.rs  library.rs  library_app.rs  main.rs  persistence.rs  prefs.rs  reader.rs  render_library.rs  search.rs
tests/: integration.rs
